# Cifar10

./: 99枚の検証結果の正誤表.xlsx  README.rst  cifar10_Getdata.py  cifar10_gazoubunrui.py  cifar10_ten_gakushu.py  cifar10_ten_mihon.py  cifar10_tennigakushu.py  pyproject.toml
tensorboard/train/: events.out.tfevents.1639967615.DESKTOP-4CP8RH8.13420.0.v2  events.out.tfevents.1639975037.DESKTOP-4CP8RH8.10288.0.v2  events.out.tfevents.1639975277.DESKTOP-4CP8RH8.17984.0.v2  events.out.tfevents.1639975595.DESKTOP-4CP8RH8.8676.0.v2  events.out.tfevents.1639976936.DESKTOP-4CP8RH8.15172.0.v2
tensorboard/validation/: events.out.tfevents.1639967754.DESKTOP-4CP8RH8.13420.1.v2  events.out.tfevents.1639975165.DESKTOP-4CP8RH8.10288.1.v2  events.out.tfevents.1639975431.DESKTOP-4CP8RH8.17984.1.v2  events.out.tfevents.1639975725.DESKTOP-4CP8RH8.8676.1.v2  events.out.tfevents.1639977067.DESKTOP-4CP8RH8.15172.1.v2
tests/: test_cifar10.py
